--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,11 +1,11 @@
 .header {
   width: 100%;
+  height: 60px;
   padding: 0 20px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: bisque;
 }
 .logo img {
   height: 40px;
