--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@
 /* css variables */
 :root {
   --main-purple: #7c4ec4;
-  --main-green: #2e7d32;
+  --main-green: #21820c;
 }
 /* global rules */
 html,
