add restaurant page

--- a/src/styles/RestaurantContact.module.css
+++ b/src/styles/RestaurantContact.module.css
@@ -1,3 +1,9 @@
+.resto_contact_info {
+  display: flex;
+  padding-top: 20px;
+  width: 100%;
+  justify-content: space-between;
+}
 .col_1 {
   width: 70%;
 }
