--- a/src/styles/NearbyRestos.module.css
+++ b/src/styles/NearbyRestos.module.css
@@ -1,23 +1,70 @@
+.carroussel::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.carroussel {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.nearby_restos {
+  padding-top: 40px;
+}
+.arrow_left,
+.arrow_right {
+  cursor: pointer;
+  position: absolute;
+  z-index: 5;
+  background-color: rgb(206, 197, 197, 1);
+  border-radius: 50%;
+  margin-top: 10%;
+}
+.arrow_right {
+  right: 0;
+}
+.relative {
+  position: relative;
+}
 .nearby_restos .carroussel {
   width: 100%;
   overflow-x: scroll;
+  scroll-behavior: smooth;
   display: flex;
 }
-
+.nearby_restos h1 {
+  margin-bottom: 40px;
+  position: relative;
+}
+.nearby_restos h1::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  bottom: -10px;
+  left: 0;
+  height: 10px;
+  width: 50%;
+  background-color: var(--main-purple);
+}
 .card {
-  height: 300px;
+  height: 400px;
   width: 270px;
   flex-shrink: 0;
+  margin-right: 20px;
   position: relative;
   cursor: pointer;
 }
+.nearby_restos .carroussel .card:last-child {
+  margin-right: 0;
+}
 .photo {
-  height: 176px;
+  height: 276px;
   width: 100%;
   border-radius: 7px;
   background-color: var(--main-purple);
 }
 .photo img {
+  height: 100%;
   border-radius: 7px;
   object-fit: cover;
   transition: ease 3s;
