--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -36,6 +36,7 @@
   padding: 5px 10px;
   font-size: 1rem;
   margin-top: 10px;
+  font-family: "Nunito";
 }
 .col_2 input::placeholder {
   color: #686868;
