--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -36,6 +36,7 @@
   color: black;
 }
 .col_2 input {
+  font-family: "Nunito";
   outline-color: var(--main-purple);
   width: 100%;
   height: 45px;
