--- a/src/styles/RestaurantHeader.module.css
+++ b/src/styles/RestaurantHeader.module.css
@@ -47,6 +47,7 @@
   color: white;
 }
 .add_favorite {
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -57,6 +58,9 @@
   border-radius: 50%;
   background-color: #fff;
   margin-bottom: 10px;
+}
+.add_favorite:hover {
+  opacity: 0.9;
 }
 .fav_count {
   position: absolute;
