--- a/src/styles/RestauranReviews.module.css
+++ b/src/styles/RestauranReviews.module.css
@@ -41,6 +41,15 @@
   font-size: 1.2rem;
   margin: 10px 0;
 }
+.body {
+  margin-bottom: 20px;
+}
+
+.pros > span:first-child,
+.cons > span:first-child {
+  font-size: 1.2rem;
+  font-family: "Nunito Bold";
+}
 .review p {
   font-family: "Nunito";
   font-size: 18px;
