--- a/src/styles/RestaurantHeader.module.css
+++ b/src/styles/RestaurantHeader.module.css
@@ -71,3 +71,31 @@
   font-size: 14px;
   background-color: var(--main-purple);
 }
+
+/* click message */
+
+.click_message {
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  margin-bottom: -70px;
+  bottom: 0;
+  z-index: 20;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: ease 0.3s;
+}
+.click_message > div {
+  background-color: white;
+  box-shadow: 0 0 10px;
+  width: 350px;
+  height: 50px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.click_message > div > span {
+  margin-left: 10px;
+}
