--- a/src/styles/Search.module.css
+++ b/src/styles/Search.module.css
@@ -20,6 +20,47 @@
   font-size: 1.2rem;
   font-family: "Nunito";
 }
+.search main {
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+.filter {
+  display: inline-block;
+  background-color: rgb(230, 230, 230);
+  border-radius: 10px;
+  padding: 5px 10px;
+  color: var(--main-purple);
+  font-family: "nunito";
+  font-size: 1.2rem;
+
+  width: max-content;
+}
+.filter select {
+  margin-left: 10px;
+  background-color: transparent;
+  font-size: 1.2rem;
+  height: 20px;
+  line-height: 20px;
+  appearance: none;
+  border: none;
+  font-family: "nunito";
+  outline: none;
+}
+.count_result {
+  margin-top: 20px;
+  font-size: 1.2rem;
+  width: max-content;
+  position: relative;
+}
+.count_result::after {
+  content: "";
+  bottom: -5px;
+  width: 100%;
+  left: 0;
+  height: 3px;
+  background-color: var(--main-purple);
+  position: absolute;
+}
 
 .search_bar .icon_div {
   cursor: pointer;
@@ -34,25 +75,41 @@
   background-color: var(--main-purple);
 }
 .card {
+  border: 1px solid grey;
+  border-radius: 10px;
   display: flex;
   width: 70%;
   height: 300px;
-  background-color: green;
+  margin-top: 30px;
+}
+.no_result {
+  margin-top: 100px;
+  text-align: center;
+  font-size: 2rem;
+  color: var(--main-green);
 }
 .card > div {
   height: 100%;
   width: 50%;
 }
 .col_1 {
-  background-color: hotpink;
+  position: relative;
+  background-color: var(--main-purple);
+  border-radius: 10px;
+}
+.col_1 img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
 }
 .col_2 {
   padding: 20px 30px;
-  background-color: rgb(165, 157, 172);
 }
 .col_2 h2 {
   color: var(--main-green);
   font-size: 24px;
+  margin-bottom: 30px;
 }
 .type {
   display: flex;
@@ -71,7 +128,7 @@
   font-size: 1.3rem;
 }
 .description {
-  margin-top: 10px;
+  margin-top: 20px;
   font-family: "Nunito";
   height: 3.6em;
   overflow: hidden;
