--- a/src/styles/Carrousel.module.css
+++ b/src/styles/Carrousel.module.css
@@ -10,7 +10,7 @@
 }
 
 .carrousel {
-  min-height: max-content;
+  height: 270px;
   width: 100%;
   margin-top: 30px;
   position: relative;
@@ -29,7 +29,7 @@
   z-index: 5;
   background-color: rgb(206, 197, 197, 1);
   border-radius: 50%;
-  margin-top: 10%;
+  top: 100px;
 }
 .arrow_right {
   right: 0;
@@ -44,7 +44,16 @@
   border-radius: 10px;
   overflow: hidden;
   margin-left: 20px;
+  position: relative;
 }
 .scrollable_carroussel > div:first-child {
   margin-left: 0;
+}
+@media (max-width: 767.98px) {
+  .card {
+    height: 200px;
+    width: 200px;
+  }
+}
+@media (max-width: 575.98px) {
 }
