--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -31,19 +31,19 @@
 }
 .search_bar input {
   outline: none;
-  height: 50px;
+  height: 100%;
   font: 1em sans-serif;
   padding-left: 10px;
   width: 100%;
   border: none;
 }
-.search_bar .icon_div {
+.icon_div {
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  height: 50px;
+  height: 100%;
   width: 70px;
   top: 0;
   right: 0;
@@ -61,4 +61,45 @@
   /* z-index: 1; */
   bottom: 0;
   overflow: hidden;
+}
+@media (max-width: 767.98px) {
+  .hero {
+    height: 300px;
+  }
+  .decoration {
+    height: 60px;
+  }
+  .search_bar {
+    width: 90%;
+  }
+  .title {
+    font-size: 30px;
+  }
+  .search_bar {
+    height: 40px;
+    min-width: 80%;
+  }
+  .icon_div {
+    width: 50px;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .title {
+    font-size: 6vw;
+  }
+  .hero {
+    height: 250px;
+  }
+  .decoration {
+    height: 50px;
+  }
+}
+@media (max-width: 375.98px) {
+  .hero {
+    height: 200px;
+  }
+  .decoration {
+    height: 40px;
+  }
 }
