--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -27,3 +27,48 @@
 .home main {
   z-index: 2;
 }
+
+/* // X-Small devices (portrait phones, less than 576px)
+
+
+// Small devices (landscape phones, less than 768px)
+
+
+
+// Medium devices (tablets, less than 992px)
+
+
+/* 
+@media (max-width: 1250.98px) { 
+
+} */
+@media (max-width: 991.98px) {
+  .title h1 {
+    font-size: 3vw;
+  }
+}
+
+@media (max-width: 767.98px) {
+}
+
+@media (max-width: 575.98px) {
+  .title h1 {
+    font-size: 20px;
+  }
+  .title span {
+    font-size: 14px;
+    min-width: max-content;
+    margin-left: 10px;
+  }
+  .home main .restos {
+    justify-content: center;
+  }
+}
+@media (max-width: 375.98px) {
+  .title h1 {
+    font-size: 16px;
+  }
+  .home main .restos {
+    margin-top: 20px;
+  }
+}
