--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -65,3 +65,32 @@
 .bottom button {
   background-color: black;
 }
+
+@media (max-width: 767.98px) {
+  .login main {
+    width: 350px;
+  }
+  .login main > div {
+    width: 100%;
+    height: 100%;
+  }
+  .login main > div:first-child {
+    display: none;
+  }
+  .col_2 h4 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 375.98px) {
+  .login main {
+    width: 98vw;
+  }
+  .login main > div {
+    width: 100%;
+    height: 100%;
+  }
+  .col_2 h4 {
+    font-size: 18px;
+  }
+}
