--- a/src/styles/Map.module.css
+++ b/src/styles/Map.module.css
@@ -3,3 +3,22 @@
   height: 300px;
   width: 300px;
 }
+@media (max-width: 1200.98px) {
+  .map {
+    margin-top: 40px;
+    width: 90%;
+    height: 400px;
+  }
+}
+@media (max-width: 767.98px) {
+  .map {
+    margin-top: 40px;
+    width: 90%;
+    height: 300px;
+  }
+}
+
+@media (max-width: 575.98px) {
+}
+@media (max-width: 375.98px) {
+}
