--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -72,3 +72,30 @@
 .bottom button {
   background-color: black;
 }
+@media (max-width: 767.98px) {
+  .signup main {
+    width: 350px;
+  }
+  .signup main > div {
+    width: 100%;
+    height: 100%;
+  }
+  .signup main > div:first-child {
+    display: none;
+  }
+  .col_2 h4 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 375.98px) {
+  .signup main {
+    width: 98vw;
+  }
+  .signup main > div {
+    width: 100%;
+    height: 100%;
+  }
+  .col_2 h4 {
+    font-size: 18px;
+  }
+}
