--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,6 +52,12 @@ p {
   width: 1200px;
   margin: 0 auto;
 }
+@media (max-width: 1250.98px) {
+  .container {
+    width: 95%;
+    margin: 0 auto;
+  }
+}
 button {
   cursor: pointer;
 }
