--- a/src/styles/Pagination.module.css
+++ b/src/styles/Pagination.module.css
@@ -41,7 +41,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--main-green);
+  background-color: var(--main-purple);
   font-size: 1.5rem;
 }
 @media (max-width: 575.98px) {
